--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,35 +25,35 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.0.3
+  flutter_svg: ^2.0.9
   image_picker: ^0.8.4+11
   provider: ^6.0.2
-  firebase_auth: ^3.3.11
-  firebase_core: ^1.13.1
-  firebase_ml_model_downloader: ^0.1.0+12
-  cloud_firestore: ^3.1.14
-  google_sign_in: ^5.3.1
+  firebase_auth: ^4.15.2
+  firebase_core: ^2.24.2
+  firebase_ml_model_downloader: ^0.2.4+8
+  cloud_firestore: ^4.13.5
+  google_sign_in: ^6.2.0
   flutter_tflite: ^1.0.1
-  intl: ^0.17.0
+  intl: ^0.19.0
   flutter_bloc: ^8.0.1
   bloc: ^8.0.3
-  dio: ^4.0.6
-  hexcolor: ^2.0.6
+  dio: ^5.4.0
+  hexcolor: ^3.0.1
   shared_preferences: ^2.0.13
-  lottie: ^1.3.0
+  lottie: ^2.7.0
   animated_splash_screen: ^1.2.0
-  screenshot: ^1.2.3
-  permission_handler: ^9.2.0
-  firebase_core_platform_interface: 4.5.1
-  image_gallery_saver: ^1.7.1
-  flutter_launcher_icons: ^0.9.2
-  firebase_storage: ^10.2.16
-  adaptive_dialog: ^1.6.4+1
+  screenshot: ^2.1.0
+  permission_handler: ^11.1.0
+  firebase_core_platform_interface: ^5.0.0
+  image_gallery_saver: ^2.0.3
+  flutter_launcher_icons: ^0.11.0
+  firebase_storage: ^11.5.5
+  adaptive_dialog: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^3.0.1
   flutter_native_splash: any
 flutter_native_splash:
   color: "#ffffff"
